--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ header {
     padding: 20px 35px;
     background-color: #39a6b2;
 }
-header h1 {
+.header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
@@ -26,6 +26,7 @@ header h1 {
 header a {
     text-decoration: none;
     color: #fce138;
+    display: inline;
 
 } 
 
