--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ section {
     padding: 60px; 
 } 
 .hero {
-    background-image: url("../images/hero-bg.jpg");
+    background-image: url(../images/hero-bg\ \(2\).jpg); 
     height: 600px;
     background-size: cover;
     background-position: center;
