--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,28 +134,28 @@ border:none;
 padding: 10px 20px;
 font-size: 16px;
 }
-.intro {
-    text-align: center;
-} 
+
 .intro p {
     line-height: 1.7;
     color:#39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 .steps {
-    text-align: center;
     background: #fce138;
 } 
 .section-title {
     font-size: 55px;
     color:#024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 } 
+
 .primary-border {
     border-color: #fce138;
 
@@ -182,9 +182,9 @@ font-size: 16px;
 .steps span {
     font-size: 38px;
 }  
-.trainers {
-    text-align: center;
-}
+.trainers 
+   
+
 .trainer {
     width: 900px;
     margin: 0 auto 30px auto;
@@ -222,7 +222,6 @@ font-size: 16px;
     line-height: 1.3;
 }
 .contact {
-    text-align: center;
     background: #024e76;
 } 
 .contact h2 {
@@ -252,4 +251,7 @@ font-size: 16px;
 } 
 .contact-info a {
     color:#fce138
+} 
+.flex-row {
+    display: flex;
 }
